--- a/myfinanceops/myfinanceops_frontend/package.json
+++ b/myfinanceops/myfinanceops_frontend/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "pinia": "^2.1.7",
