--- a/myfinanceops/myfinanceops_frontend/package.json
+++ b/myfinanceops/myfinanceops_frontend/package.json
@@ -14,6 +14,7 @@
     "@auth0/auth0-spa-js": "^2.1.3",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
