--- a/myfinanceops/myfinanceops_frontend/package.json
+++ b/myfinanceops/myfinanceops_frontend/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
+    "vue3-datepicker": "^0.4.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
